# proyectoIV

./: Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: continuous_integration.yml  update_docker.yml
anime/: anime.py  recomendacion.py  usuario.py
docs/: Objetivo1.md  Objetivo2.md  Objetivo3.md  Objetivo4.md  Objetivo5.md  Objetivo6.md
tests/: test_recomendaciones.py  test_usuario.py
