[tool.poetry]
name = "anirec"
version = "0.0.5"
description = "Recomendaciones personalizadas de series anime"
authors = ["danifm1321 <danifm13@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pylint = "^2.11.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
